2002-04-30  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* autogen.sh: Invoke plain aclocal instead of guile-aclocal.sh.
	We don't need the Guile m4 macros and the previous invocation of
	guile-aclocal.sh created the aclocal.m4 file in the wrong
	directory (see change from 2002-04-26).

2002-04-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* autogen.sh: Change to parent dir before invoking
	guile-aclocal.sh.

2002-04-16  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (dist-hook): Make sure $(distdir)/Makefile.in is
	writable before modifying it.

2002-04-10  Rob Browning  <rlb@defaultvalue.org>

	* configure.in: add definitions to AC_DEFINE calls for new
	autoconf.

	* .cvsignore: add autom4te.cache and *.c.clean.c.

2002-03-24  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (.c.x): Pass "-o $@" to guile-snarf.

2002-03-13  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (snarfcppopts): New var.
	(.c.x): Use $(snarfcppopts). Rework guile-snarf usage.

2002-02-27  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (EXTRA_DIST): Added the `LIBGUILEREADLINE-VERSION'
	file.

2002-02-25  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* configure.in (LIBGUILEREADLINE-VERSION):
	Look for this file in $srcdir.

2002-02-24  Rob Browning  <rlb@defaultvalue.org>

	* configure.in: source ./LIBGUILEREADLINE-VERSION for version info
	and then AC_SUBST the resulting variables:
	LIBGUILEREADLINE_INTERFACE_CURRENT,
	LIBGUILEREADLINE_INTERFACE_REVISION,
	LIBGUILEREADLINE_INTERFACE_AGE, and
	LIBGUILEREADLINE_INTERFACE.

	* Makefile.am (libguilereadline_la_LDFLAGS): use
	@LIBGUILEREADLINE_INTERFACE@ for version information.

	* LIBGUILEREADLINE-VERSION: new file containing shared lib
	versioning information.

2002-02-12  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (AUTOMAKE_OPTIONS): Replace "gnu" with "foreign".
	This undoes the 2002-02-08 change.

2002-02-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>
