@@ -1,6 +1,6 @@
 ;;;; readline.scm --- support functions for command-line editing
 ;;;;
-;;;; 	Copyright (C) 1997, 1999, 2000, 2001 Free Software Foundation, Inc.
+;;;; 	Copyright (C) 1997, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
 ;;;; 
 ;;;; This program is free software; you can redistribute it and/or modify
 ;;;; it under the terms of the GNU General Public License as published by
@@ -199,8 +199,9 @@
 
 (define-public (activate-readline)
   (if (and (isatty? (current-input-port))
-	   (not (and (module-defined? the-root-module 'use-emacs-interface)
-		     (module-ref the-root-module 'use-emacs-interface))))
+	   (not (let ((guile-user-module (resolve-module '(guile-user))))
+		  (and (module-defined? guile-user-module 'use-emacs-interface)
+		       (module-ref guile-user-module 'use-emacs-interface)))))
       (let ((read-hook (lambda () (run-hook before-read-hook))))
 	(set-current-input-port (readline-port))
 	(set! repl-reader
